src/objects/TemporalCasosPolizas__c.object
<CustomObject>
    <fields>
        <fullName>Asociado__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Asociado</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Caso__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Caso</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Casos - Polizas</relationshipLabel>
        <relationshipName>TemporalCasosPolizas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EmailBeneficiario__c</fullName>
        <label>Email Beneficiario</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>EmailContratante__c</fullName>
        <label>Email Contratante</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>NoPolizaEspejo__c</fullName>
        <label>No de Poliza Espejo</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NoPoliza__c</fullName>
        <label>No de Poliza</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Temporal Casos - Polizas</label>
    <nameField>
        <label>Número de Caso</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Temporal Casos - Polizas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>